# rag-document-qa

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: chunk_repository.py  chunking.py  config.py  db.py  document_repository.py  embeddings.py  generation.py  main.py  rate_limiter.py  schemas.py
sql/: schema.sql
static/: app.js  styles.css
templates/: index.html
