[project]
name = "my-first-pet-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "langchain-google-genai>=4.2.7",
    "langchain-text-splitters>=1.1.2",
    "pgvector>=0.5.0",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.51.0",
]
